<resources>
    <string name="app_name">lab3</string>
    <string name="t1">Number 1</string>
    <string name="t2">Nunmer 1</string>
    <string name="t3">Number 01</string>
    <string name="h1">Enter number 01</string>
    <string name="t4">Number 02</string>
    <string name="h5">Enter number 02</string>
    <string name="b1">+</string>
    <string name="b2">-</string>
    <string name="b3">*</string>
    <string name="b4">/</string>
    <string name="t6">Number 01</string>
</resources>